--- a/src/variable.scss
+++ b/src/variable.scss
@@ -1,6 +1,10 @@
 $font: "Helvetica";
 $textColor: #3d5170;
 
+$green: #0ec261;
+$black: #121212;
+$gray: #becad6;
+
 
 $buttonColor: #007bff;
 $buttonColorRed: #8a0623;
@@ -8,4 +12,8 @@ $buttonColorGray: #e9ecef;
 
 $inputColor: #becad6;
 $inputColorActive: #2bff;
+
+$shadow: 1px 6px 20px 1px rgba(77, 83, 90, 0.171);
+
+$mobile: 768px;
 
