--- a/src/components/Orders/OrderLine/OrderLine.scss
+++ b/src/components/Orders/OrderLine/OrderLine.scss
@@ -40,7 +40,9 @@
         color: black;
       }
     }
-
+    &__image{
+      object-fit: cover;
+    }
     &__color {
       span {
         color: black;
