--- a/src/variable.scss
+++ b/src/variable.scss
@@ -4,11 +4,12 @@ $textColor: #3d5170;
 $green: #0ec261;
 $black: #121212;
 $gray: #becad6;
+$ligth-gray: #e6eaee;
 
 
 $buttonColor: #007bff;
-$buttonColorRed: #8a0623;
-$buttonColorGray: #e9ecef;
+$buttonColorRed: #99021e;
+$buttonColorGray: #a6b4c2c7;
 
 $inputColor: #becad6;
 $inputColorActive: #2bff;
