--- a/src/components/AdminPanel/Menu/Menu.scss
+++ b/src/components/AdminPanel/Menu/Menu.scss
@@ -40,9 +40,10 @@
       color: $textColor;
       font-size: 15px;
     }
-    &__icon {
+    &__image {
       height: 15px;
       width: 15px;
+      margin-left: 30px;
     }
     &__box {
       display: block;
@@ -56,25 +57,23 @@
       font-family: $font;
       background-color: #fff;
       transition: 0.4s all;
-      text-decoration: none;
+      text-decoration: none;     
       &::after {
         content: "";
         position: absolute;
+        background-color: transparent;
         top: 0;
         left: 0;
         height: 100%;
-        width: 4px;
-        background-color: transparent;
-        transition: 0.2s all;
+        width: 5px;
+        transition: 0.5s all;
       }
-      &.active::after {
-        border-right: 1px solid #6facfc;
+      &:focus::after {
+        border-right: 1px solid $ligth-gray;
         background-color: $buttonColor;
-        box-shadow: 5px 0px 12px 0px $buttonColor;
+        box-shadow: 0px 0px 30px 0px $buttonColor;
       }
-      &.active {
-        background-color: #fbfbfb;
-      }
+     
     }
   }
 }
