--- a/src/components/CarCreate/CarSetting/CarSetting.scss
+++ b/src/components/CarCreate/CarSetting/CarSetting.scss
@@ -1,4 +1,39 @@
 @import "../../../variable.scss";
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-weight: inherit;
+    font-style: inherit;
+    font-size: 100%;
+    
+    vertical-align: baseline;
+}
+:focus {
+    outline: 0;
+}
+body {
+    line-height: 1;
+    color: black;
+    background: white;
+}
+ol, ul {
+    list-style: none;
+}
+table {
+    border-collapse: separate;
+    border-spacing: 0;
+}
+
 .car-setting {
   display: flex;
   flex: auto;
@@ -9,12 +44,14 @@
     flex: 1 1 auto;
     display: flex;
     flex-direction: column;
+    padding-bottom: 30px;
   }
   &__container {
     display: flex;
     flex-direction: column;
     padding: 20px 20px 20px 20px;
     min-height: 80%;
+    margin-left: 40px;
   }
   &__title {
     color: $textColor;
@@ -29,13 +66,11 @@
   &__buttons {
     display: flex;
     justify-content: space-between;
-    margin-right: 40px;
+    margin-right: 200px;
     margin-left: 40px;
     &-container {
       margin-left: 20px;
-      display: flex;
-     
-      width: 100px;
+      display: flex;   
     }
     &__add {
       display: none;
@@ -65,6 +100,30 @@
         width: 14px;
         height: 2px;
       }     
+    }
+  }
+}
+
+@media (max-width: $mobile) {
+  .car-setting {
+    display: block;
+    &__container {
+      display: block;
+      margin-left: 0;
+    }
+    &__setting{
+      margin-bottom: 0;
+      margin-top: 20px;
+    }
+    &__title{
+      margin-bottom: 10px;
+    }
+    &__buttons{
+      display: block;
+      margin-bottom: 80px;
+      &-container {
+        margin-left: 0;
+      }
     }
   }
 }
