--- a/src/components/AdminPanel/Menu/Menu.scss
+++ b/src/components/AdminPanel/Menu/Menu.scss
@@ -1,16 +1,18 @@
 @import "../../../variable.scss";
+@import "../../../mixins.scss";
 
 .menu {
   
   top: 0;
   z-index: 10;
-  position: absolute;
-  transition: 0.4s all ease-out;
+  position: fixed;
+  
   box-shadow: $shadow;
   width: 285px;
   min-height: 100vh;
   background-color: #fff;
   height: 100%;
+  z-index: 101;
 
   &__head {
     padding: 23px 68px;
@@ -56,7 +58,7 @@
       box-shadow: $shadow;
       font-family: $font;
       background-color: #fff;
-      transition: 0.4s all;
+      
       text-decoration: none;     
       &::after {
         content: "";
@@ -66,7 +68,7 @@
         left: 0;
         height: 100%;
         width: 5px;
-        transition: 0.5s all;
+        
       }
       &:focus::after {
         border-right: 1px solid $ligth-gray;
@@ -81,110 +83,9 @@
   display: none;
 }
 @media (max-width: $mobile) {
-  .menu{
-   width: 0;
-    &__head{
-      display: none;
-    }
-    
-  }
-  #menu__toggle {
-    opacity: 0;
-    display: none;
-  }
-  
- 
-  #menu__toggle:checked ~ .menu__btn > span {
-    background-color: transparent;
-  
-    &::before {
-      top: 0;
-      transform: rotate(45deg);
-    }
-  
-    &::after {
-      top: 0;
-      transform: rotate(-45deg);
-    }
-  }
-  
-  #menu__toggle:checked ~ .menu__list {
-    list-style: none;
-    width: 100vw;
-  
-    & .menu__item {
-      visibility: visible;
-    }
-    & .menu__icon {
-      visibility: visible;
-    }
-  }
-  
-  .menu__btn {
-    top: 0;
-    left: 0;
-    position: absolute;
-    width: 64px;
-    margin-top: 0;
-    cursor: pointer;
-    background-color: transparent;
-    z-index: 3;
-  
-    & > span,
-    & > span::before,
-    & > span::after {
-      display: block;
-      position: fixed;
-      width: 28px;
-      height: 4px;
-      background-color: gray;
-      transition-duration: 0.1s;
-    }
-  
-    & > span {
-      position: absolute;
-      top: 34px;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      border-radius: 2px;
-    }
-  
-    & > span::before {
-      content: "";
-      top: -8px;
-      border-radius: 2px;
-    }
-  
-    & > span::after {
-      content: "";
-      top: 8px;
-      border-radius: 2px;
-    }
-  }
-  .menu__list {
-    display: block;
-    position: fixed;
-    top: 67px;
-    width: 100vw;
-    height: 100%;
-    margin: 0;
-    background-color: transparent;
-    transition-duration: 0.1s;
-    z-index: 2;
-  }
-  
-  .menu__item {
-    visibility: hidden;
-    display: block;
-    color: gray;
-    font-weight: 500;
-    font-size: 32px;
-    text-decoration: none;
-    text-transform: uppercase;
-  }
+  @include menu();
+}
 
-  .menu__item__visible{
-    visibility: visible;   
-  }
- 
+@media (max-width: $tablet) {
+  @include menu();
 }
