--- a/src/components/Global/EntityLine/EntityLine.scss
+++ b/src/components/Global/EntityLine/EntityLine.scss
@@ -1,10 +1,11 @@
 @import "../../../variable.scss";
+@import "../../../mixins.scss";
 
-.order__line {
-  padding-top: 15px;
-  padding-bottom: 15px;
+.entity__line {
+
   &__container {
     display: flex;
+    justify-content: space-between;
     flex-direction: row;
     border-bottom: 1px solid $ligth-gray;
     padding-left: 0;
@@ -15,6 +16,16 @@
     width: 100%;
     font: $font;
     padding-top: 15px;
-    padding-bottom: 30px;    
+    padding-bottom: 30px;
   }
+  &__items {
+    display: flex;
+    justify-content: space-between;
+   
+  }
+}
+
+
+@media (max-width: $mobile) {
+  @include line();
 }
