--- a/src/components/Orders/CheckOrder/CheckOrder.scss
+++ b/src/components/Orders/CheckOrder/CheckOrder.scss
@@ -33,7 +33,7 @@
   &__label {
     span {
       display: block;
-        color: $gray;
+        color: $black;
         line-height: 14px;
     }
    
@@ -65,6 +65,7 @@
 
 @media (max-width: $mobile) {
   .checkbox {
+    padding-top: 10px;
     &__label {
       span {
         display: block;
